counter in child component

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -4,6 +4,6 @@
     </p>
     <p>and parentCounter is: <span>{{parentCounter}}</span></p>
     <p>and childCounter is: <span>{{childCounter}}</span></p>
-
+    <app-grandchild [childCounter] = "childCounter"></app-grandchild>
 </div>
 
