--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
     <h2>
         Parent component and his counter is: <span>{{paretnCounter}}</span>
     </h2>
-    <app-child [parentCounter] = "paretnCounter"></app-child>
+    <app-child [parentCounter] = 10></app-child>
 </div>
 
