--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,9 +1,7 @@
 <div class = "jumbotron">
+    <h3>Child component</h3>
     <p>
-        Child component 
+        {{parentCounter.licznik}}
     </p>
-    <p>and parentCounter is: <span>{{parentCounter}}</span></p>
-    <p>and childCounter is: <span>{{childCounter}}</span></p>
-    <app-grandchild [childCounter] = "childCounter"></app-grandchild>
 </div>
 
