--- a/src/app/child/child.component.css
+++ b/src/app/child/child.component.css
@@ -1,5 +1,6 @@
 .jumbotron {
     border: rgb(0, 255, 21) 2px solid;
     padding: 10px;
-    margin: 30px 50px 50px 30px
+    margin: 30px 50px 50px 30px;
+    background-color: bisque;
   }
