--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,7 +1,7 @@
 <div class = "jumbotron">
-    <h3>Child component</h3>
+    <h3>Sługa mistrza <ng-content></ng-content></h3>
     <p>
-        {{parentCounter.licznik}}
+        {{parentCounter}}
     </p>
 </div>
 
