--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,5 +1,5 @@
 <div class = "jumbotron">
-    <h3>Sługa mistrza <ng-content></ng-content></h3>
+    <h3>Sługa mistrza - <ng-content></ng-content></h3>
     <p>
         {{parentCounter}}
     </p>
