--- a/src/app/child/child.component.css
+++ b/src/app/child/child.component.css
@@ -2,5 +2,5 @@
     border: rgb(0, 255, 21) 2px solid;
     padding: 10px;
     margin: 30px 50px 50px 30px;
-    background-color: bisque;
+    background-color: rgb(190, 113, 17);
   }
